# tradeing-strategy-cli

./: README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
strategy_cli/: cli.py
tests/: test_cli.py
